rename url /providers to /game-aggrgator
